--- a/icebergs.html
+++ b/icebergs.html
@@ -26,7 +26,6 @@
 <div>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark">
-        <!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
         <a href="https://switchers.ai" class="navbar-brand">
             <div class="logo dark-mode-logo" id="site-logo"></div>
         </a>
@@ -34,33 +33,33 @@
         <div class="collapse navbar-collapse" id="switchers-navbar">
             <div class="navbar-nav">
                 <button type="button" class="btn btn-sm text-white m-1" id="settings-nav-btn"
-                        data-target="settings.html"
+                        data-target="settings"
                         data-toggle="tooltip"
                         data-placement="bottom" title="Settings">
                     <i class="bi bi-gear"></i>
                     Settings
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn"
-                        data-target="net.html"
+                        data-target="net"
                         data-toggle="tooltip"
                         data-placement="bottom" title="Net">
                     <i class="bi bi-speedometer2"></i>
                     Net
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
-                        data-target="questions.html"
+                        data-target="questions"
                         data-toggle="tooltip" data-placement="bottom" title="Questions">
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
-                        data-target="outliers.html"
+                        data-target="outliers"
                         data-toggle="tooltip" data-placement="bottom" title="Impacts">
                     <i class="bi bi-clipboard-data text-success"></i>
                     Impacts
                 </button>
                 <button type="button" class="btn btn-sm bg-primary text-white m-1" id="icebergs-nav-btn"
-                        data-target="icebergs.html"
+                        data-target="icebergs"
                         data-toggle="tooltip" data-placement="bottom" title="Hazardous">
                     <i class="bi bi-exclamation-triangle text-danger"></i>
                     Hazardous
@@ -84,11 +83,55 @@
         </div>
         <!-- END OF DARK MODE TOGGLE -->
 
+        <!-- LOG OUT -->
+        <div class="ml-2">
+            <button class="btn btn-md text-danger" data-toggle="modal" data-target="#logout-modal" id="open-logout-modal-button">
+                <i class="bi bi-door-open" data-toggle="tooltip" data-placement="bottom" title="logout"></i>
+            </button>
+        </div>
+        <!-- END OF LOG OUT -->
+
         <a href="#" data-toggle="collapse" data-target="#switchers-navbar" class="ml-auto h3 mb-0 d-md-none">
             <i class="bi bi-list"></i>
         </a>
     </nav>
     <!-- END OF NAVBAR -->
+
+    <!-- LOG OUT MODAL -->
+    <div class="container">
+        <!-- The Modal -->
+        <div class="modal fade" id="logout-modal">
+            <div class="modal-dialog modal-md">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span> !</h4> <i class="bi bi-chat-text"></i>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body justify-content-center">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h6>Hope you had a great experience using <span class="text-primary">Switchers AI</span></h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">Are you sure you want log out?</div>
+                        </div>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" id="logout-button">Log Out <i class="bi bi-box-arrow-right"></i></button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i class="bi bi-arrow-return-left"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END OF LOG OUT MODAL -->
 
     <!-- MAIN VIEW-->
     <div class="container-fluid">
@@ -127,6 +170,9 @@
                                         </button>
                                         <button type="button" class="btn btn-secondary sensitivity-level-button"
                                                 data-level="low">Low
+                                        </button>
+                                        <button type="button" class="btn btn-secondary sensitivity-level-button"
+                                                data-level="switchers">Switchers
                                         </button>
                                     </div>
                                     <div class="col-md-4 col-sm-4 col-xs-4 text-right">
@@ -182,6 +228,8 @@
     <!-- End of Footer -->
 </div>
 
+<script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
+
 <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         type="text/javascript"></script>
 <script crossorigin="anonymous" src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
@@ -199,6 +247,7 @@
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 <script src="js/template.js" type="text/javascript"></script>
+<script src="js/auth.js" type="text/javascript"></script>
 <script src="js/googleChart.js" type="text/javascript"></script>
 <script src="js/icebergs.js" type="text/javascript"></script>
 </body>
