--- a/settings.html
+++ b/settings.html
@@ -24,85 +24,15 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/main_view.css">
-    <!--    <link rel="stylesheet" href="css/settings.css">-->
+    <link rel="stylesheet" href="css/settings.css">
+
 </head>
 <body class="body-background-dark d-flex flex-column min-vh-100">
-<style>
-    .navbar-brand img {
-        height: 40px;
-        width: auto;
-    }
 
-    /* Style for the floating button */
-    #save-settings {
-        padding: 10px 20px;
-        background-color: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-
-    /* Optional: Add some responsiveness to ensure it doesn't overlap content */
-    @media (max-width: 600px) {
-        #floatingButton {
-            right: 10px;
-            bottom: 10px;
-            padding: 5px 10px;
-        }
-    }
-
-    /* Add some spacing */
-    .container-fluid {
-        padding-top: 20px;
-    }
-
-    .pt-2 {
-        padding-top: 20px;
-    }
-
-    .mt-3 {
-        margin-top: 15px;
-    }
-
-    .mb-2 {
-        margin-bottom: 10px;
-    }
-
-    h2 {
-        margin-bottom: 20px;
-        font-size: 24px;
-        font-weight: bold;
-    }
-
-    /* Adjust position of save button */
-    @media (max-width: 768px) {
-        #save-settings {
-            width: 100%;
-            text-align: center;
-            border-radius: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-        }
-    }
-
-    /* Flex container for the select and button */
-    .select-container {
-        display: flex;
-        align-items: center;
-    }
-
-    .select-container select {
-        flex: 1;
-        margin-right: 10px;
-    }
-</style>
 
 <div>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-md bg-dark">
-        <!--        <h1 class="navbar-brand random-color text-success">Switchers.ai</h1>-->
         <a href="https://switchers.ai" class="navbar-brand">
             <div class="logo dark-mode-logo" id="site-logo"></div>
         </a>
@@ -110,33 +40,33 @@
         <div class="collapse navbar-collapse" id="switchers-navbar">
             <div class="navbar-nav">
                 <button type="button" class="btn btn-sm bg-primary text-white m-1" id="settings-nav-btn"
-                        data-target="settings.html"
+                        data-target="settings"
                         data-toggle="tooltip"
                         data-placement="bottom" title="Settings">
                     <i class="bi bi-gear"></i>
                     Settings
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="net-nav-btn"
-                        data-target="net.html"
+                        data-target="net"
                         data-toggle="tooltip"
                         data-placement="bottom" title="Net">
                     <i class="bi bi-speedometer2"></i>
                     Net
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="questions-nav-btn"
-                        data-target="questions.html"
+                        data-target="questions"
                         data-toggle="tooltip" data-placement="bottom" title="Questions">
                     <i class="bi bi-pie-chart"></i>
                     Questions
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="impacts-nav-btn"
-                        data-target="outliers.html"
+                        data-target="outliers"
                         data-toggle="tooltip" data-placement="bottom" title="Impacts">
                     <i class="bi bi-clipboard-data text-success"></i>
                     Impacts
                 </button>
                 <button type="button" class="btn btn-sm text-white m-1" id="icebergs-nav-btn"
-                        data-target="icebergs.html"
+                        data-target="icebergs"
                         data-toggle="tooltip" data-placement="bottom" title="Hazardous">
                     <i class="bi bi-exclamation-triangle text-danger"></i>
                     Hazardous
@@ -160,30 +90,89 @@
         </div>
         <!-- END OF DARK MODE TOGGLE -->
 
+        <!-- LOG OUT -->
+        <div class="ml-2">
+            <button class="btn btn-md text-danger" data-toggle="modal" data-target="#logout-modal"
+                    id="open-logout-modal-button">
+                <i class="bi bi-door-open" data-toggle="tooltip" data-placement="bottom" title="logout"></i>
+            </button>
+        </div>
+        <!-- END OF LOG OUT -->
+
         <a href="#" data-toggle="collapse" data-target="#switchers-navbar" class="ml-auto h3 mb-0 d-md-none">
             <i class="bi bi-list"></i>
         </a>
     </nav>
     <!-- END OF NAVBAR -->
 
+    <!-- LOG OUT MODAL -->
+    <div class="container">
+        <!-- The Modal -->
+        <div class="modal fade" id="logout-modal">
+            <div class="modal-dialog modal-md">
+                <div class="modal-content">
+
+                    <!-- Modal Header -->
+                    <div class="modal-header">
+                        <h4 class="modal-title">Hi <span class="text-primary" id="user-name"></span> !</h4>
+                        <i class="bi bi-chat-text"></i>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+
+                    <!-- Modal body -->
+                    <div class="modal-body justify-content-center">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                <h6>Hope you had a great experience using <span class="text-primary">Switchers AI</span>
+                                </h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">Are you sure you want log out?</div>
+                        </div>
+                    </div>
+
+                    <!-- Modal footer -->
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger" data-dismiss="modal" id="logout-button">Log Out <i
+                                class="bi bi-box-arrow-right"></i></button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close <i
+                                class="bi bi-arrow-return-left"></i></button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END OF LOG OUT MODAL -->
+
     <!-- MAIN VIEW-->
     <div class="container-fluid">
         <!--Main layout-->
         <main>
             <div class="pt-2">
-                <div class="row mt-3 mb-2">
-                    <h2>Set point of view:</h2>
-
-                    <div class="col-md-3 mb-2 col-sm-12 mb-1">
-                        <select id="pov-choice" class="form-select" aria-label="Default select example">
-                            <option disabled selected>Select a candidate to inspect</option>
-                        </select>
-                        <!-- Floating button at the bottom -->
-                    </div>
-                </div>
                 <div class="row">
-                    <div class="col-md-3 mb-2 col-sm-12 mb-1">
-                        <button id="save-settings">Save</button>
+                    <div class="col-md-3 col-sm-12">
+                        <div class="row mt-3 mb-2">
+                            <h2 class="">Set point of view:</h2>
+                            <div class="mb-2 mb-1">
+                                <select id="pov-choice" class="form-select" aria-label="Default select example">
+                                    <option disabled selected>Select a candidate to inspect</option>
+                                </select>
+                                <!-- Floating button at the bottom -->
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-3 mb-2 col-sm-12 mb-1">
+                                <button id="save-settings">Save</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="user-management-container" class="col-md-9 col-sm-12" style="display: none">
+                        <div class="row mt-3 mb-2">
+                            <h2>User Management:</h2>
+                            <div id="user-management-widget-container" class="mb-2 mb-1">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -191,6 +180,7 @@
         <!--Main layout-->
     </div>
     <!-- END OF MAIN VIEW-->
+
 
     <!-- Footer -->
     <footer class="footer bg-dark text-white fixed-bottom">
@@ -200,6 +190,8 @@
     </footer>
     <!-- End of Footer -->
 </div>
+
+<script src="https://unpkg.com/@descope/web-js-sdk@x.x.x/dist/index.umd.js"></script>
 
 <script crossorigin="anonymous" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"
         type="text/javascript"></script>
@@ -215,6 +207,10 @@
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="js/template.js"></script>
+<script src="js/auth.js"></script>
 <script src="js/settings.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/@descope/user-management-widget/dist/index.js"></script>
+
 </body>
 </html>
